// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registry getInjections can get all injections registered 1`] = `
[
  {
    "name": "str",
    "options": {
      "optional": false,
    },
    "token": Token {
      "identifier": Symbol(registry.string),
    },
    "type": "property",
  },
  {
    "options": {
      "optional": false,
    },
    "token": Token {
      "identifier": Symbol(registry.class),
    },
    "type": "request",
  },
]
`;

exports[`registry getPropertyInjections can get all property injections 1`] = `
[
  {
    "name": "str",
    "options": {
      "optional": false,
    },
    "token": Token {
      "identifier": Symbol(registry.string),
    },
    "type": "property",
  },
]
`;
